--- a/web-applications/data-driven-app/views/login.ejs
+++ b/web-applications/data-driven-app/views/login.ejs
@@ -2,9 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <% include partials/head %>
     <title>Simple CRM</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="container">
+      <form action="/login" method="post" class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+    </div>
+    <% include partials/scripts %>
   </body>
 </html>
